@startuml
'https://plantuml.com/sequence-diagram
class InventoryManagementApplication{
+Main
+start
}
class InventoryAppController{
-newItemSerial:TextField
-newItemName
-newItemValue
-editItemID
-editSerial
-editName
-editValue
-saveFileName
-loadFileName
--
-addItemButton: Button
-removeItemButton
-editItemButton
-removeAllButton
-saveButton
-loadButton
--
-tableView:TableView<Item>
-errorLog: TextArea
--
-Item: ObservableList<Item>
-operations: Operations
--
+addItem
+removeItem
+editItem
+removeAll
+loadButton+save
}

class Operations{
+createItem:Item
+itemCheck:boolean
+fileCreator
+fileReader: List<Item>
-errors:ArrayList<String>
+errorManager
+returnErrors: String
+clearErrors
}

class Item {
-value:double
-serial:String
-name:String
--
+setValue
+getValue:double
+setSerial
+getSerial:String
+setName
+getName:String
}

InventoryAppController - Operations
Item --* InventoryAppController
InventoryAppController -- InventoryManagementApplication
@enduml